feat: upgrade to version 2

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lint": "eslint ./src --ext .js,.jsx"
   },
   "dependencies": {
+    "@orchy-mfe/spa-adapter": "^0.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.3",
@@ -30,7 +31,6 @@
     "happy-dom": "^7.7.0",
     "rollup-plugin-visualizer": "^5.8.3",
     "vite": "^3.2.3",
-    "vite-plugin-qiankun": "^1.0.15",
     "vite-plugin-svgr": "^2.2.2",
     "vitest": "^0.25.2"
   }
